--- a/exec/포팅매뉴얼(빌드, 배포, 외부서비스).md
+++ b/exec/포팅매뉴얼(빌드, 배포, 외부서비스).md
@@ -69,4 +69,10 @@
    docker run -lt -d --name front -p 3000:3000 jrstock-front:dev
    ```
 
-   
+
+
+
+# 외부 서비스 정보
+
+1. [Google Analytics](https://analytics.google.com/analytics/web)
+2. [Google Cloud Platform](https://console.cloud.google.com/apis)
